# pedagogy-benchmark

./: .gitignore  LICENSE  README.md  custom_models.yaml  pyproject.toml
.dvc/: config
configs/models/: cdpk_online_leaderboard.yaml  full_list_20251015.yaml  send_online_leaderboard.yaml
configs/questions/: CDPK_Luganda_creative_arts.yaml  CDPK_Luganda_gen_pk.yaml  CDPK_Luganda_literacy.yaml  CDPK_Luganda_maths.yaml  CDPK_Luganda_science.yaml  CDPK_Luganda_social_studies.yaml  CDPK_Luganda_technology.yaml  CDPK_ans_shuffled_creative_arts.yaml  CDPK_ans_shuffled_gen_pk.yaml  CDPK_ans_shuffled_literacy.yaml  CDPK_ans_shuffled_maths.yaml  CDPK_ans_shuffled_science.yaml  CDPK_ans_shuffled_social_studies.yaml  CDPK_ans_shuffled_technology.yaml  CDPK_creative_arts.yaml  CDPK_gen_pk.yaml  CDPK_literacy.yaml  CDPK_maths.yaml  CDPK_science.yaml  CDPK_send.yaml  CDPK_social_studies.yaml  CDPK_technology.yaml
data/: cache.dvc  models.csv  pedagogy_benchmark_luganda.csv  pedagogy_benchmark_luganda_cdpk.csv  pedagogy_benchmark_luganda_send.csv  providers.csv
data/Chile/SEND/: CDPK_send_dev.csv.dvc  CDPK_send_test.csv.dvc
scripts/: baseline_allmodels_general.py  check_model_config.py  load_dataset_multingual.py  prepare_cdpk_dataset_multilingual.py  run_pedagogy_benchmark.py
scripts/legacy/: cdpk_variance_exp.py  results_for_website_cdpkmmlu.py  results_for_website_send.py
scripts/legacy/preprocessing/: flag_duplicates.py  prepare_cdpk_dataset.py  process_chilean_files.py  (+2 more)
src/cdpk/: benchmark_answers.py  benchmark_constants.py  benchmark_run.py  benchmark_utils.py
(+28 files in other folders)
